app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */
@import "bootstrap";

//ALL pages
body, html {
    height: 100%;
}

.container {
    padding-top: 20px;
    min-height: 75%;
}

footer {
    height: 15%;
    background-color: whitesmoke;
}

ul {
    list-style: none; /* Removes list bullets */
    padding: 10px;
    margin: 0;
}

.task-item:before {
    content: ""; /* Insert content that looks like bullets */
    padding-right: 8px;
}


// Navbar Style
.navbar a#brand {
    font-size:2rem;
}

.navbar-nav li.nav-item {
    font-size: 1.25rem;
}

//home and welcome page
.cover-container {
    margin: auto;
}

h1.cover-heading {
    color: white;
}
p.lead {
    color: white;
}

//JOB APPLICATION
.status {
    background-color: #20a8ad;
    color: white;
    padding: 2px;
    border-radius: 4px;
    font-size: 0.6em;
    text-transform: uppercase;
}
.application-details{
    background: #f7f8fc;
    padding: 20px;
    box-shadow: 2px 2px 5px darkslategrey;
    margin: 10px;
}
//USER dashboard
.todo-list {
    background: lightgoldenrodyellow;
    padding: 20px;
    box-shadow: 2px 2px 5px black;
}

//USER profile
.accomplishments {
    border: dashed 5px #5cb85c;
    text-align: center;
    border-radius: 10px;
    padding: 5px;
}

